# 30x-outreach

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SKILL.md  config.example.json  pyproject.toml
.github/: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: AGENTS.md  bug.yml  config.yml  feature.yml
.github/workflows/: AGENTS.md  ci.yml  release.yml
agents/: AGENTS.md  outreach-growth-operator.role.md  thirtyx-outreach.agent.md  thirtyx-outreach.entrypoint.md  thirtyx-outreach.overlay.md
agents/state/: AGENTS.md
agents/workflows/: AGENTS.md  thirtyx-outreach-discover-buying-signals.workflow.md  thirtyx-outreach-run-outreach-experiment.workflow.md  (+1 more)
assets/: AGENTS.md
data/: AGENTS.md
docs/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  PROVIDERS.md  ROADMAP.md
protocol/: AGENTS.md  VERSION
references/: AGENTS.md  copy-rules.md  evaluation-rubric.md  expert-panel.md  icp-template.md  instantly-rules.md  market-research-brief-2026.md  measurement-framework.md
scripts/: AGENTS.md  cold-outbound-sender.py  competitive-monitor.py  config_loader.py  cross-signal-detector.py  instantly-audit.py  lead-pipeline.py  sequence_linter.py
tests/: AGENTS.md  test_approval_gate.py  test_audience.py  test_decision.py  test_lead_pipeline_safety.py  test_observation.py  test_pipeline.py  test_schemas.py  test_sender_safety.py  test_sequence_linter.py
thirtyx/: AGENTS.md  __init__.py  __main__.py  approval.py  audience.py  cli.py  decision.py  evaluation.py  observation.py  pipeline.py
(+39 files in other folders)
